dashboard fix issue

--- a/client/.env.prod
+++ b/client/.env.prod
@@ -3,4 +3,4 @@ VITE_APP_VERSION="1.0.0"
 VITE_APP_DEMO="AFS"
 VITE_APP_FULL_NAME="AFS Admin Application"
 VITE_APP_CLIENT_URL="http://139.5.199.37"
-VITE_APP_API_URL="http://139.5.199.37/tms/"
+VITE_APP_API_URL="http://139.5.199.37/AFS/"
