--- a/client/.env
+++ b/client/.env
@@ -1,6 +1,6 @@
-VITE_APP_NAME="TMS"
+VITE_APP_NAME="AFS"
 VITE_APP_VERSION="1.0.0"
-VITE_APP_DEMO="tms"
-VITE_APP_FULL_NAME="TMS Admin Application"
+VITE_APP_DEMO="AFS"
+VITE_APP_FULL_NAME="AFS Admin Application"
 VITE_APP_CLIENT_URL="http://localhost:8080"
 VITE_APP_API_URL="http://localhost:3000/afs"
