--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "tms-admin-server",
+  "name": "afs-admin-server",
   "version": "23.10.1",
-  "description": "TMS plaza Server",
+  "description": "afs plaza Server",
   "main": "src/index.js",
-  "author": "imtiyazs@trecent.in",
+  "author": "gaurharsh1737@gmail.com",
   "license": "",
   "engines": {
     "node": ">=16.0.0"
