--- a/server/.env
+++ b/server/.env
@@ -4,9 +4,9 @@ HOST=http://localhost:8080
 PORT=3000
 
 # MSSQL configuration
-MSSQL_HOST=10.10.27.2
+MSSQL_HOST=10.10.27.3
 MSSQL_USER=sa
-MSSQL_PASSWORD=Sugoi@dme
+MSSQL_PASSWORD='Nhai#2700'
 MSSQL_DATABASE=rmcs
 
 # JWT configuration
